--- a/index.html
+++ b/index.html
@@ -32,6 +32,6 @@ Schmidt smit smith smithe smite!
 
 Smithereens zmithereens smutherines.</textarea>
         <div></div>
-        <script src="build/build.js"></script>
+        <script src="build.js"></script>
     </body>
 </html>
